--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ project_urls =
     CI=https://gitlab.com/nekokatt/hikari/pipelines
 platforms = any
 license = ZLIB
-license_file = LICENSE
+license_file = LICENSE.md
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Framework :: AsyncIO
