Final doc-gen tweaks

--- a/tox.ini
+++ b/tox.ini
@@ -84,8 +84,10 @@ deps =
 setenv =
     PAPER = a4
     SPHINXOPTS = -WTvvn
+whitelist_externals =
+    dot
 commands =
-    sphinx-apidoc -o docs/modules -e --implicit-namespaces -M hikari
+    python .ci/gendoc.py hikari docs/_templates/gendoc docs/index.rst docs/modules
     sphinx-build docs public -b html
     # sphinx-build docs public/tex -b latex
 
