--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,6 @@ envlist =
     py36
     py37
     py38
-    # py39
     pypy3
     bandit
     black-check
@@ -35,13 +34,16 @@ setenv =
     COVERAGE_FILE = public/coverage-{envname}
 passenv =
     http_proxy https_proxy no_proxy SSL_CERT_FILE PYTEST_* RUN_SLOW_TESTS
-extras = testing
+deps =
+    poetry
+    six  # poetry dependencies bug, perhaps?
 commands =
+    poetry config settings.virtualenvs.create false
+    poetry install -vvv
     python -c "__import__('os').makedirs('public',exist_ok=True)"
-    pytest --cov "hikari" --cov-config "{toxinidir}/tox.ini" --cov-report=term --cov-branch --testdox {posargs:.} hikari_tests/
-    coverage xml -o public/coverage.{envname}.xml
-install_command =
-    pip install --pre --find-links --no-index {opts} {packages}
+    poetry run pytest --cov "hikari" --cov-config "{toxinidir}/tox.ini" --cov-report=term --cov-branch --testdox {posargs:.} hikari_tests/
+    poetry run coverage xml -o public/coverage.{envname}.xml
+skip_install = true
 
 [pytest]
 addopts = -ra --showlocals
@@ -77,6 +79,8 @@ exclude_lines =
 [testenv:docs]
 description = invoke sphinx-build to build the HTML docs
 deps =
+    poetry
+    six  # poetry bug?
     Jinja2==2.10
     sphinx==2.1.2
     sphinx-autodoc-typehints==1.6.0
@@ -87,6 +91,8 @@ setenv =
 whitelist_externals =
     dot
 commands =
+    poetry config settings.virtualenvs.create false
+    python -m poetry install -vvv
     python .ci/gendoc.py hikari docs/_templates/gendoc docs/index.rst docs/modules
     sphinx-build docs public -b html
     # sphinx-build docs public/tex -b latex
@@ -114,8 +120,6 @@ skip_install = true
 description = check the source code formatting. Run `tox -e black-fix` to automatically fix any issues.
 deps =
     black
-whitelist_externals =
-    python
 commands =
     python .ci/black.py hikari --check
 
@@ -124,7 +128,5 @@ skip_install = true
 description = reformat any source code
 deps =
     black
-whitelist_externals =
-    python
 commands =
     python .ci/black.py hikari hikari_tests setup.py docs/conf.py
