--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,40 @@
 # along with Hikari. If not, see <https://www.gnu.org/licenses/>.
 
 [build-system]
-requires = [
-    "setuptools >= 40.0.4", 
-    "wheel >= 0.29.0",
-]
-build-backend = "setuptools.build_meta"
+requires        = ["poetry>=0.12"]
+build-backend   = "poetry.masonry.api"
+
+[tool.poetry]
+name            = "hikari"
+version         = "2019"
+description     = "A sane Discord API for Python"
+authors         = ["Nekoka.tt <nekoka.tt@outlook.com>"]
+license         = "LGPL-3.0-ONLY"
+readme          = "README.md"
+
+[tool.poetry.dependencies]
+python          = ">=3.6,<3.9"
+aiohttp         = "~3.5"
+dacite          = "~1.0"
+dataclasses     = "~0.6"
+python-dateutil = "2.8.0"
+websockets      = "~7.0"
+
+[tool.poetry.dev-dependencies]
+asynctest       = "~0.12"
+async-timeout   = "~3.0"
+coverage        = "~4.5"
+pytest          = "~4.4"
+pytest-asyncio  = "~0.10"
+pytest-cov      = "~2.7"
+pytest-html     = "~1.20"
+pytest-testdox  = "~1.1"
+tox             = { version = "~3.13", optional = true }
+
+[tool.poetry.extras]
+tox             = ["tox"]
 
 [tool.black]
-line-length = 120
-target_version = ["py36", "py37", "py38"]
-include = ".*py$"
+line-length     = 120
+target-version  = ["py36", "py37", "py38"]
+include         = ".*py$"
