Addresses #23, formats non-compliant files

--- a/tox.ini
+++ b/tox.ini
@@ -93,7 +93,7 @@ whitelist_externals =
 commands =
     poetry config settings.virtualenvs.create false
     python -m poetry install -vvv
-    python .ci/gendoc.py hikari docs/_templates/gendoc docs/index.rst docs/modules
+    python .ci/gendoc.py hikari docs/_templates/gendoc docs/index.rst docs
     sphinx-build docs public -b html
     # sphinx-build docs public/tex -b latex
 
