--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,8 +34,7 @@ variables:
   stage: test
   script:
     - mkdir public || true
-    - tox -avv
-    - tox -e ${CI_JOB_NAME}
+    - nox -s pytest
   artifacts:
     paths:
       - public
@@ -49,7 +48,7 @@ variables:
   before_script:
     - python -V
     - apk add git
-    - pip install tox
+    - pip install nox
 
 ###
 ### TEST IN PYTHON 3.6
@@ -91,39 +90,23 @@ pypy3:
     - pypy3 -V
     - apt-get update
     - apt-get install git -y
-    - pip install tox
+    - pip install nox
 
 ###
 ### FAIL WITH WARNING IF CODE DOES NOT MATCH DESIRED FORMAT.
 ### This only runs for merge requests.
 ###
-black:
+verify:
   stage: verify
   allow_failure: false
   image: python:3-alpine
   before_script:
-    - pip install tox 
+    - pip install nox
   script:
-    - tox -e black-check
+    - nox -s black_check bandit
   except:
     - master
     - staging
-
-###
-### RUN STATIC APPLICATION SECURITY TESTING.
-###
-bandit:
-  stage: verify
-  allow_failure: false
-  image: python:3-alpine
-  before_script:
-    - pip install tox
-  script:
-    - tox -e bandit || true
-    - tox -e bandit-report
-  artifacts:
-    paths:
-      - public
 
 ###
 ### VERIFY THAT SETUP.PY IS VALID.
@@ -231,9 +214,9 @@ deploy-to-prod:
   before_script:
     - apt-get update
     - apt-get install graphviz -y
-    - pip install tox
+    - pip install nox
   script:
-    - tox -e docs
+    - nox -ssphinx
   artifacts:
     paths:
       - public
