--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,15 +55,12 @@ websockets      = "~7.0"
 asynctest       = "~0.12"
 async-timeout   = "~3.0"
 coverage        = "~4.5"
+nox             = "2019.5.30"
 pytest          = "~4.4"
 pytest-asyncio  = "~0.10"
 pytest-cov      = "~2.7"
 pytest-html     = "~1.20"
 pytest-testdox  = "~1.1"
-tox             = { version = "~3.13", optional = true }
-
-[tool.poetry.extras]
-tox             = ["tox"]
 
 [tool.black]
 line-length     = 120
