Added base unit tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,12 +1,13 @@
 [pytest]
 markers =
-    slow: Mark this test as being relatively slow to evaluate.
     audit_log: Mark this test as being part of the Audit Log API.
-    gateway: Mark this test as being part of the Gateway API.
     channel: Mark this test as being part of the Channel API.
+    gateway: Mark this test as being part of the Gateway API.
     guild: Mark this test as being part of the Guild API.
     invite: Mark this test as being part of the Invite API.
+    model: Mark this test as testing a model.
     oauth2: Mark this test as being part of the OAuth2 API.
+    slow: Mark this test as being relatively slow to evaluate.
     user: Mark this test as being part of the User API.
     voice: Mark this test as being part of the Voice API.
     webhook: Mark this test as being part of the Webhook API.
