Finished moving server_debug from the net folder to the model folder.  Fixed an error in base with the datetime in base.py.  Also changed the init file in testdata to encode in UTF-8 for windows users to clear warnings.  Also changed pytest.ini to remove 2 more warnings.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 markers =
-    audit_log: Mark this test as being part of the Audit Log API.
+    auditlog: Mark this test as being part of the Audit Log API.
     channel: Mark this test as being part of the Channel API.
     gateway: Mark this test as being part of the Gateway API.
     guild: Mark this test as being part of the Guild API.
@@ -11,3 +11,4 @@ markers =
     user: Mark this test as being part of the User API.
     voice: Mark this test as being part of the Voice API.
     webhook: Mark this test as being part of the Webhook API.
+    emoji: Mark this test as being part of the Emoji API.
