--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
+# Core dependencies
 aiohttp
-poetry
 websockets
+
+# CI runner
+nox
+
+# Linter
+pylint
+
+# SAST
+bandit
+
+# Formatter
+black
+
+# Package manager
+poetry
