Start global state

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,3 +12,4 @@ markers =
     voice: Mark this test as being part of the Voice API.
     webhook: Mark this test as being part of the Webhook API.
     emoji: Mark this test as being part of the Emoji API.
+    state: Mark this test as being part of the state system.
