--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,8 @@ variables:
     DOCKER_DRIVER: "overlay2"
     RUN_SLOW_TESTS: "true"
     OWNER: "nekokatt"
+    # gitalb.com/nekokatt/hikari trigger token
+    HIKARI_TRIGGER_TOKEN: secure
 
 cache:
     paths:
@@ -128,6 +130,8 @@ setup.py:
     stage: deploy
     image: python:3
     before_script:
+        - apt-get update
+        - apt-get install curl -y
         - pip install poetry
         - poetry install -v
         - poetry show -v
@@ -188,6 +192,9 @@ deploy-to-prod:
         RELEASE_WEBHOOK_NAME: "prod"
         RELEASE_WEBHOOK_DESCRIPTION: "Install it with:\n```bash\npip install hikari.core\n```\n"
         RELEASE_WEBHOOK_COLOUR: "0x5c2040"
+    after_script:
+        - echo "Triggering hikari job"
+        - curl --request POST --form token=${HIKARI_TRIGGER_TOKEN} --form ref=master https://gitlab.com/api/v4/projects/13535679/trigger/pipeline | python -m json.tool
     environment:
         name:
             prod
