--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -136,10 +136,8 @@ setup.py:
         - poetry install -v
         - poetry show -v
     script:
-        - poetry config repositories.hikarirepo ${PYPI_REPO}
         - source tasks/deploy.sh
-        - do-entire-deployment
-        - python tasks/notify.py "${version} (${release})" "hikari.core"
+        - do-deployment
 
 ###
 ### HANDLE DEPLOYING TO OUR STAGING ENVIRONMENT ON test.pypi.org
@@ -180,9 +178,6 @@ deploy-to-prod:
         RELEASE_WEBHOOK_NAME: "prod"
         RELEASE_WEBHOOK_DESCRIPTION: "Install it with:\n```bash\npip install hikari.core\n```\n"
         RELEASE_WEBHOOK_COLOUR: "0x5c2040"
-    after_script:
-        - echo "Triggering hikari job"
-        - curl --request POST --form token=${HIKARI_TRIGGER_TOKEN} --form ref=master https://gitlab.com/api/v4/projects/13535679/trigger/pipeline | python -m json.tool
     environment:
         name:
             prod
