Update .gitlab-ci.yml to init pages properly

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,6 +108,7 @@ pages:
         - apt-get install graphviz -y
         - pip install nox
     script:
+        - nox -sinit
         - nox -ssphinx
     artifacts:
         paths:
